--- a/src/app/components/display/TaskDetail/TaskDetail.module.scss
+++ b/src/app/components/display/TaskDetail/TaskDetail.module.scss
@@ -1,7 +1,7 @@
 .task_detail {
-    @apply bg-[#e7e5e5] dark:bg-zinc-900
+    @apply backdrop-blur-[20px] bg-[rgb(231,229,229,0.8)] dark:bg-[rgba(26,26,26,0.8)]
     py-[20px] px-[30px] rounded-[12px] max-w-[600px] w-[100%] h-[535px]
-    transition-all duration-[.5s] ease-in-out overflow-auto;
+    transition-all duration-[.5s] ease-in-out overflow-hidden;
 
     @media (max-width: 1000px) {
         @apply h-[328px] max-w-[550px];
@@ -11,36 +11,44 @@
         animation: top .4s linear;
     }
 
-    &::-webkit-scrollbar {
-        @apply w-[4px];
-    }
-
-    &::-webkit-scrollbar-track {
-        @apply bg-transparent; 
-    }
-
-    &::-webkit-scrollbar-thumb {
-        @apply bg-[#B5B5B5] rounded-[12px];
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-        @apply bg-[#dbdbdb];
-    }
-
     .top {
-        @apply flex items-center justify-between;
+        @apply flex items-center justify-between gap-3 sticky top-0 overflow-hidden mb-[10px];
+    }
+
+    .scrolls {
+        @apply overflow-auto h-full pb-[30px];
+
+        &::-webkit-scrollbar {
+            @apply w-[4px];
+        }
+    
+        &::-webkit-scrollbar-track {
+            @apply bg-transparent; 
+        }
+    
+        &::-webkit-scrollbar-thumb {
+            @apply bg-[#B5B5B5] rounded-[12px];
+        }
+    
+        &::-webkit-scrollbar-thumb:hover {
+            @apply bg-[#dbdbdb];
+        }
     }
     
     .map {
-        @apply flex items-center gap-[7px];
+        @apply flex items-center gap-[7px] overflow-hidden whitespace-nowrap;
     
             span {
                 @apply text-[14px] text-[#292929] dark:text-white;
             }
+
+            svg {
+               @apply min-w-[16px];
+            }
     }
     
     textarea {
-        @apply resize-none w-[100%] outline-none bg-transparent mt-[20px] text-[#292929] text-[30px] font-bold dark:text-white;
+        @apply resize-none w-[100%] outline-none bg-transparent mt-[10px] text-[#292929] text-[30px] font-bold dark:text-white;
     }
     
     .right {
@@ -69,10 +77,10 @@
     
          button {
              @apply py-[5px] px-[10px] flex items-center gap-[10px] text-[14px] font-bold
-             rounded-[20px] bg-[#dad8d8] dark:bg-stone-950 dark:text-white;
+             rounded-[20px] bg-[#dad8d8] backdrop-blur-[20px] bg-[rgb(231,229,229,0.8)] dark:bg-[rgba(39,39,39,0.8)] whitespace-nowrap overflow-hidden;
     
                  svg {
-                     @apply text-[16px];
+                     @apply text-[16px] min-w-[16px];
                  }
          }
      }
