--- a/src/app/components/display/Folders/Folders.module.scss
+++ b/src/app/components/display/Folders/Folders.module.scss
@@ -21,7 +21,7 @@
         }
 
         &:hover {
-            @apply bg-[#f2f2f2] dark:bg-[#292929];
+            @apply bg-[rgba(242,242,242,0.5)] dark:bg-[rgba(68,68,68,0.7)];
         }
     }
 
@@ -38,7 +38,7 @@
             }
 
                 &:hover {
-                    @apply bg-[#f2f2f2] dark:bg-[#292929];
+                    @apply bg-[rgba(242,242,242,0.5)] dark:bg-[rgba(68,68,68,0.7)];
                 }
         }
 
