--- a/src/app/components/display/SearchBlock/SearchBlock.module.scss
+++ b/src/app/components/display/SearchBlock/SearchBlock.module.scss
@@ -1,6 +1,6 @@
 .search_block {
-    @apply fixed top-[70px] right-[55px] z-[5010] w-[300px] p-[10px] rounded-[20px] bg-[#e7e5e5] dark:bg-[#262626]
-    transition-all ease-in-out duration-[.3s] max-h-[400px] overflow-auto;
+    @apply fixed top-[70px] right-[55px] z-[5010] w-[300px] p-[10px] rounded-[20px] bg-[rgb(231,229,229,0.5)] dark:bg-[rgba(26,26,26,0.5)]
+    backdrop-blur transition-all ease-in-out duration-[.3s] max-h-[400px] overflow-auto;
 
     &::-webkit-scrollbar {
         @apply w-[4px];
