--- a/src/app/components/display/TaskDetailModal/TaskDetailModal.module.scss
+++ b/src/app/components/display/TaskDetailModal/TaskDetailModal.module.scss
@@ -12,52 +12,81 @@
     }
 
     .taskModal {
-        @apply fixed z-[12000] bg-white dark:bg-[#2a292b]
+        @apply fixed z-[12000] backdrop-blur-[20px] bg-[rgb(231,229,229,0.8)] dark:bg-[rgba(26,26,26,0.8)]
         py-[20px] px-[30px] rounded-[12px] max-w-[600px] w-[100%] h-[500px]
         border-solid border-[1px] border-[#dfdfdf] dark:border-[#403f41]
         translate-y-[-50px] invisible opacity-0
-        transition-all duration-[.5s] ease-in-out overflow-auto;
+        transition-all duration-[.5s] ease-in-out overflow-hidden;
 
         @media (max-width: 1000px) {
-            @apply px-[15px] w-fit h-[380px];
+            @apply w-[95%] px-[15px] h-[380px];
         }
 
         @media (max-width: 400px) {
             max-width: clamp(18.75rem, calc(-56.25rem + 375vw), 37.5rem);
         }
+    }
 
+    .top {
+        @apply flex items-center justify-between gap-3 sticky top-0 overflow-hidden mb-[10px];
+
+       a {
+        @apply relative;
+        
+            &::after {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                border-bottom: 1px solid white;
+                width: 100%;
+                opacity: 0;
+                @apply border-[#232323] dark:border-white;
+            }
+
+            &:hover {
+                &::after {
+                    opacity: 1;
+                }
+            }
+       }
+
+    }
+
+    .scrolls {
+        @apply overflow-auto h-full pb-[30px];
 
         &::-webkit-scrollbar {
             @apply w-[4px];
         }
-
+    
         &::-webkit-scrollbar-track {
             @apply bg-transparent; 
         }
-
+    
         &::-webkit-scrollbar-thumb {
             @apply bg-[#B5B5B5] rounded-[12px];
         }
-
+    
         &::-webkit-scrollbar-thumb:hover {
             @apply bg-[#dbdbdb];
         }
     }
 
-    .top {
-        @apply flex items-center justify-between;
-    }
-
     .map {
-        @apply flex items-center gap-[7px];
+        @apply flex items-center gap-[7px] overflow-hidden whitespace-nowrap;
 
             span {
                 @apply text-[14px] text-[#292929] dark:text-white;
             }
+
+            svg {
+                @apply min-w-[16px];
+            }
     }
 
     textarea {
-        @apply resize-none w-[100%] outline-none bg-transparent mt-[20px] text-[#292929] text-[30px] font-bold dark:text-white;
+        @apply resize-none w-[100%] outline-none bg-transparent mt-[10px] text-[#292929] text-[30px] font-bold dark:text-white;
     }
 
     .right {
@@ -92,10 +121,10 @@
  
          button {
              @apply py-[5px] px-[10px] flex items-center gap-[10px] text-[14px] font-bold
-             rounded-[20px] bg-[#dad8d8] dark:bg-stone-950 dark:text-white;
+             rounded-[20px] bg-[#dad8d8] backdrop-blur-[20px] bg-[rgb(231,229,229,0.8)] dark:bg-[rgba(39,39,39,0.8)] overflow-hidden whitespace-nowrap;
  
                  svg {
-                     @apply text-[16px];
+                     @apply text-[16px] min-w-[16px];
                  }
          }
      }
