--- a/src/app/components/display/TaskTwo/TaskTwo.module.scss
+++ b/src/app/components/display/TaskTwo/TaskTwo.module.scss
@@ -7,6 +7,7 @@
 
     h4 {
         @apply select-none w-[100%] text-[#292929] text-base font-bold dark:text-white;
+        word-break: break-word;
     }
 
     .left {
