--- a/src/app/components/ul/Nav/Nav.module.scss
+++ b/src/app/components/ul/Nav/Nav.module.scss
@@ -7,7 +7,7 @@
                 @apply flex flex-col justify-center items-start w-[100%] h-[40px];
 
                     &:hover {
-                        @apply bg-[#f2f2f2] dark:bg-[#292929];
+                        @apply bg-[rgba(242,242,242,0.5)] dark:bg-[rgba(68,68,68,0.7)];
                     }
             }
 
