--- a/src/app/components/display/Profile/Profile.module.scss
+++ b/src/app/components/display/Profile/Profile.module.scss
@@ -6,7 +6,7 @@
     }
 
     .button {
-        @apply flex items-center gap-[20px];
+        @apply flex items-center gap-[20px] relative;
 
         @media (max-width: 1000px) {
             @apply bg-[rgb(231,229,229,0.5)] dark:bg-[rgba(26,26,26,0.5)]
@@ -21,10 +21,10 @@
                @apply capitalize text-base font-medium font-['Ubuntu'] text-[#292929] dark:text-white; 
                word-break: break-word;
             }
+    }
 
-            img {
-                @apply object-cover overflow-hidden rounded-full min-w-[40px] h-[40px];
-            }
+    .img_p {
+        @apply object-cover overflow-hidden rounded-full min-w-[40px] h-[40px];
     }
 
 }
