--- a/src/app/components/display/FoldersMob/FoldersMob.module.scss
+++ b/src/app/components/display/FoldersMob/FoldersMob.module.scss
@@ -1,5 +1,5 @@
 .folders_list {
-    @apply relative px-[15px] pt-[100px] pb-[50px] h-[95vh] overflow-auto -mb-[81px];  
+    @apply relative px-[15px] pt-[100px] pb-[50px] h-[95dvh] overflow-auto -mb-[81px];  
 
     h1 {
         @apply grid font-bold text-[20px] items-center justify-center text-white;
