--- a/src/app/styles/global/_global.scss
+++ b/src/app/styles/global/_global.scss
@@ -30,7 +30,7 @@ body {
   position: relative;
   line-height: 1.5;
   min-width: 320px;
-  font-size: 'Roboto';
+  font-family: 'Roboto';
   @apply bg-[#161616];
 }
 
