--- a/src/app/components/display/AllTaskDay/AllTaskDay.module.scss
+++ b/src/app/components/display/AllTaskDay/AllTaskDay.module.scss
@@ -27,7 +27,12 @@
         label {
             background-color: none !important;
             backdrop-filter: none !important;
-            @apply border-[#292929] dark:border-white 
+            @apply border-[#292929] dark:border-white;
+
+            
+                &:focus-within {
+                    @apply border-[#00B2FF];
+                }
         }
 
         textarea {
@@ -42,6 +47,12 @@
 
             svg {
                 @apply text-[#292929] dark:text-white;
+            }
+
+            &:hover {
+                svg {
+                    @apply text-[#00B2FF];
+                }
             }
 
         }
